fixed spacing of icons in tweet footer

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -79,6 +79,11 @@
   margin-left: auto;
   margin-right: 10px;
   margin-top: 5px;
+
+}
+
+#tweet-feed .tweet footer i {
+  padding: 2px;
 }
 
 
